<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.shuyun.qapp.ui.login.BindPhoneNumActivity">

    <include layout="@layout/common_left_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63.5dp"
        android:layout_marginLeft="@dimen/text_12"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_30"
            android:text="@string/real_name"
            android:textColor="@color/color_1"
            android:textSize="@dimen/text_16" />

        <!--真实名字-->
        <EditText
            android:id="@+id/et_realName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_10"
            android:layout_marginRight="@dimen/text_10"
            android:layout_marginTop="@dimen/text_30"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_name"
            android:textColor="@color/color_0"
            android:textSize="@dimen/text_16" />

        <ImageView
            android:layout_width="@dimen/text_20"
            android:layout_height="@dimen/text_20"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/text_15"
            android:layout_marginTop="@dimen/text_30"
            android:src="@mipmap/name" />
    </LinearLayout>

    <include layout="@layout/common_line_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45.5dp"
        android:layout_marginLeft="@dimen/text_12"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth"
            android:textColor="@color/color_1"
            android:textSize="@dimen/text_16" />
        <!--身份证号码-->
        <EditText
            android:id="@+id/et_id_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_10"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_auth"
            android:textColor="@color/color_0"
            android:textSize="@dimen/text_16" />
        <!--获取验证码按钮,根据情况显示或者隐藏-->


    </LinearLayout>

    <include layout="@layout/common_line_1" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_40"
        android:layout_marginLeft="@dimen/common_margin"
        android:layout_marginRight="@dimen/common_margin"
        android:layout_marginTop="67dp"
        android:background="@drawable/common_btn_bg_4"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/text_18" />
</LinearLayout>

