<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/common_left_title" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/text_15"
        android:layout_marginTop="@dimen/text_40"
        android:textColor="@color/color_1"
        android:textSize="@dimen/text_26"
        android:textStyle="bold" />

    <!--输入手机号-->
    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_15"
        android:layout_marginTop="72dp"
        android:text="@string/phone_number"
        android:textColor="@color/color_1"
        android:textSize="@dimen/text_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_15"
            android:layout_marginTop="@dimen/text_10"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_phone_number"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="@color/color_1"
            android:textColorHint="@color/login_text"
            android:textSize="@dimen/text_17" />

        <ImageView
            android:id="@+id/iv_clear_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_10"
            android:layout_marginTop="@dimen/text_10"
            android:layout_marginRight="@dimen/text_15"
            android:src="@mipmap/cuowu1"
            android:visibility="gone" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/text_12"
        android:layout_marginTop="@dimen/text_10"
        android:layout_marginRight="@dimen/text_12"
        android:background="@color/color_33" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/common_margin"
        android:layout_marginTop="47dp"
        android:layout_marginRight="@dimen/common_margin"
        android:layout_marginBottom="@dimen/text_1"
        android:background="@drawable/selector_3"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/next"
        android:textColor="@color/login_text"
        android:textSize="@dimen/text_15" />

    <LinearLayout
        android:id="@+id/ll_agree_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_25"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register_tip"
            android:textColor="@color/login_text"
            android:textSize="@dimen/text_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/agree_text"
            android:textColor="@color/color_4"
            android:textSize="@dimen/text_12" />
    </LinearLayout>
</LinearLayout>
