<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_cash"
        android:layout_width="@dimen/text_18"
        android:layout_height="@dimen/text_18"
        android:layout_marginLeft="@dimen/text_12"
        android:layout_marginTop="@dimen/text_15"
        android:src="@mipmap/cash" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_10"
        android:layout_marginTop="@dimen/text_15"
        android:layout_toRightOf="@+id/iv_cash"
        android:text="@string/cash"
        android:textColor="@color/color_0"
        android:textSize="@dimen/text_14" />
    <!--android:text="@string/balance"-->
    <TextView
        android:id="@+id/tv_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="@dimen/text_15"
        android:textColor="@color/color_0"
        android:textSize="@dimen/text_14"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_balance"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="@dimen/text_10"
        android:text="@string/hint"
        android:textColor="@color/color_2"
        android:textSize="@dimen/text_11" />
    <!--圆角:5 大小:90 不可点击颜色:eeeeee-->
    <Button
        android:id="@+id/btn_immedicate_withdrawal"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/text_9"
        android:layout_marginRight="@dimen/text_12"
        android:layout_marginTop="@dimen/text_15"
        android:background="@drawable/selector_3"
        android:text="@string/immedicate_withdrawal"
        android:textColor="@color/white"
        android:textSize="@dimen/text_12" />
</RelativeLayout>