<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv"
        android:layout_width="@dimen/text_18"
        android:layout_height="@dimen/text_18"
        android:layout_marginLeft="@dimen/text_12"
        android:layout_marginTop="@dimen/text_10"
        android:src="@mipmap/integral" />

    <TextView
        android:id="@+id/tv_integral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_10"
        android:layout_marginTop="@dimen/text_10"
        android:layout_toRightOf="@+id/iv"
        android:text="@string/integral"
        android:textSize="@dimen/text_14"
        android:textColor="@color/color_0"/>
    <!--android:text="@string/balance1"-->
    <TextView
        android:id="@+id/tv_integral_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="@dimen/text_10"
        android:textColor="@color/color_0"
        android:textSize="@dimen/text_14"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_integral_balance"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="@dimen/text_10"
        android:text="@string/hint1"
        android:textColor="@color/color_2"
        android:textSize="@dimen/text_11"/>
    <!--圆角:5 大小:90 不可点击颜色颜色:eeeeee-->
    <Button
        android:id="@+id/btn_immedicate_use"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/text_10"
        android:layout_marginRight="@dimen/text_12"
        android:background="@drawable/selector_3"
        android:layout_marginBottom="@dimen/text_15"
        android:text="@string/immedicate_use"
        android:textSize="@dimen/text_12"
        android:textColor="@color/white"/>
</RelativeLayout>