<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_item_height"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="@dimen/text_20"
                android:layout_height="@dimen/text_20"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/text_18"
                android:src="@mipmap/backb" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_common_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/color_0"
            android:textSize="@dimen/text_16" />

        <TextView
            android:id="@+id/tv_rigth_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/text_15"
            android:text="@string/pwd_skip"
            android:textColor="@color/color_4"
            android:textSize="@dimen/text_16"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/light_white" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/text_15"
        android:layout_marginTop="@dimen/text_40"
        android:text="@string/set_pwd"
        android:textColor="@color/color_1"
        android:textSize="@dimen/text_26"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_15"
        android:layout_marginTop="72dp"
        android:text="@string/pwd"
        android:textColor="@color/color_1"
        android:textSize="@dimen/text_14" />

    <LinearLayout
        android:id="@+id/ll_password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_10"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_15"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:textColor="@color/color_1"
            android:textColorHint="@color/login_text"
            android:textSize="@dimen/text_17" />

        <ImageView
            android:id="@+id/iv_clear_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_10"
            android:layout_marginRight="@dimen/text_10"
            android:layout_marginTop="@dimen/text_3"
            android:src="@mipmap/cuowu1"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/iv_is_show_pwd"
            android:layout_width="18dp"
            android:layout_height="12dp"
            android:layout_marginRight="@dimen/text_19"
            android:layout_marginTop="@dimen/text_5"
            android:src="@drawable/no_show_pwd" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/text_12"
        android:layout_marginRight="@dimen/text_12"
        android:layout_marginTop="@dimen/text_10"
        android:background="@color/color_33" />


    <TextView
        android:id="@+id/tv_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_15"
        android:layout_marginTop="12dp"
        android:text="@string/pwd_error"
        android:textColor="#F05939"
        android:textSize="@dimen/text_14" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="@dimen/text_1"
        android:layout_marginLeft="@dimen/common_margin"
        android:layout_marginRight="@dimen/common_margin"
        android:layout_marginTop="47dp"
        android:background="@drawable/selector_3"
        android:text="@string/btn_finish"
        android:textColor="@color/login_text"
        android:textSize="@dimen/text_15" />

</LinearLayout>
