<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fbfbfb">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/mine_bg">

        <RelativeLayout
            android:id="@+id/rl_head"
            android:layout_width="@dimen/text_70"
            android:layout_height="@dimen/text_70"
            android:layout_marginLeft="@dimen/text_12"
            android:layout_marginTop="@dimen/text_5"
            android:background="@mipmap/head_bg">

            <com.shuyun.qapp.view.CircleImageView
                android:id="@+id/iv_header_pic"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_centerInParent="true" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_phone_num1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_17"
            android:layout_marginTop="17dp"
            android:layout_toRightOf="@+id/rl_head"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_change_personal_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_phone_num1"
            android:layout_marginLeft="@dimen/text_17"
            android:layout_marginTop="@dimen/text_10"
            android:layout_toRightOf="@+id/rl_head"
            android:text="@string/change_account"
            android:textColor="@color/white"
            android:textSize="@dimen/text_11" />

        <Button
            android:id="@+id/btn_is_name_auth"
            android:layout_width="119dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="@dimen/text_12"
            android:layout_marginBottom="63dp"
            android:background="@mipmap/notpass"
            android:gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_today_answer_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_head"
            android:layout_marginLeft="@dimen/text_12"
            android:layout_marginTop="@dimen/text_8"
            android:layout_marginBottom="@dimen/text_15"
            android:text="@string/surplus_number"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_add_answer_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_head"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/text_8"
            android:layout_marginRight="@dimen/text_12"
            android:gravity="center_vertical"
            android:text="@string/add_answer_num"
            android:textColor="@color/white"
            android:textSize="@dimen/text_11" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="@dimen/text_17"
        android:layout_marginTop="105dp"
        android:layout_marginRight="@dimen/text_17"
        android:layout_marginBottom="@dimen/text_10"
        android:background="@mipmap/mine_withdraw_bg"
        android:paddingBottom="@dimen/text_2">


        <TextView
            android:id="@+id/tv_withdraw_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_20"
            android:layout_marginTop="@dimen/text_8"
            android:layout_toRightOf="@+id/iv_cash"
            android:text="@string/cash"
            android:textColor="@color/color_0"
            android:textSize="@dimen/text_14" />

        <TextView
            android:id="@+id/tv_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_5"
            android:layout_marginTop="@dimen/text_8"
            android:layout_toRightOf="@+id/tv_withdraw_text"
            android:textColor="@color/color_0"
            android:textSize="@dimen/text_14"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_balance"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="@dimen/text_4"
            android:text="@string/hint"
            android:textColor="#9b9b9b"
            android:textSize="@dimen/text_11" />

        <Button
            android:id="@+id/btn_immedicate_withdrawal"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/text_12"
            android:background="@drawable/selector_3"
            android:text="@string/immedicate_withdrawal"
            android:textColor="@color/white"
            android:textSize="@dimen/text_12" />
    </RelativeLayout>
</RelativeLayout>